created a new dircctory and file

--- a/recipes/Churros_II.html
+++ b/recipes/Churros_II.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-
-    <a href="./recipes/Churros_II.html">Churros II</a>
+    <h1>Churros II</h1>
 </body>
 
 </html>
