Updated recipe with list of ingredients

--- a/recipes/Churros_II.html
+++ b/recipes/Churros_II.html
@@ -10,6 +10,21 @@
 
 <body>
     <h1>Churros II</h1>
+    <img src="../images/Churros_II.jpg" alt="Churros II">
+
+    <h2>Description</h2>
+    <p> This fried cullers are rolled in cinamon while still hot. Gives a wonderful treat to whoever takes a bite</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 quarts vegetable oil for frying </li>
+        <li> cup water</li>
+        <li>½ cup margarine </li>
+        <li>1 cup all-purpose flour </li>
+        <li> ¼ teaspoon salt 3 eggs</li>
+        <li>¼ cup white sugar</li>
+        <li>¼ cup white sugar </li>
+        <li>¼ teaspoon ground cinnamon</li>
+    </ul>
 </body>
 
 </html>
