Added and updated all recipes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="./recipes/Churros_II.html">Churros II</a></li>
+        <li><a href="./recipes/Authentic_Tacos_al_Pastor.html">Authentic Tacos al Pastor </a></li>
+        <li><a href="./recipes/Indian_Chole_Aloo_Tikki.html">Indian Chole Aloo Tikki</a></li>
 
-    <a href="./recipes/Churros_II.html">Churros II</a>
+
+    </ul>
+
 </body>
 
 </html>
