--- a/recipes/Churros_II.html
+++ b/recipes/Churros_II.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Churros II</title>
 </head>
 
 <body>
@@ -27,16 +27,16 @@
     </ul>
     <h3>Directions</h3>
     <ol>
-        <li>Step 1</li>
-        In a heavy deep skillet or deep-fryer, heat oil to 360 degrees F (180 degrees C). Oil should be about 1 1/2 inches deep.
+        <li>In a heavy deep skillet or deep-fryer, heat oil to 360 degrees F (180 degrees C). Oil should be about 1 1/2 inches deep.
+        </li>
 
-        <li>Step2</li>
-        In a medium saucepan, heat water and margarine to a rolling boil. Combine the flour and salt; stir into the boiling mixture. Reduce heat to low and stir vigorously until the mixture forms a ball, about 1 minute. Remove from heat and beat in the eggs one
-        at a time. Spoon the mixture into a pastry bag fitted with a large star tip.
+        <li>In a medium saucepan, heat water and margarine to a rolling boil. Combine the flour and salt; stir into the boiling mixture. Reduce heat to low and stir vigorously until the mixture forms a ball, about 1 minute. Remove from heat and beat in the
+            eggs one at a time. Spoon the mixture into a pastry bag fitted with a large star tip.</li>
 
-        <li>Step 3</li>
-        Carefully squeeze out 4 inch long strips of dough directly into the hot oil. Fry 3 or 4 strips at once, until golden brown, about 2 minutes on each side. Remove from hot oil to drain on paper towels. Stir together the sugar and cinnamon; roll churros
-        in the mixture while still hot.
+
+        <li>Carefully squeeze out 4 inch long strips of dough directly into the hot oil. Fry 3 or 4 strips at once, until golden brown, about 2 minutes on each side. Remove from hot oil to drain on paper towels. Stir together the sugar and cinnamon; roll
+            churros in the mixture while still hot.</li>
+
 
     </ol>
 </body>
